--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,14 @@ tokio-util = "0.7"
 async-channel = "2"
 reqwest = "0.12"
 
+
+metrics = "0.23.0"
+metrics-prometheus = "0.4"
+metrics-exporter-prometheus = "0.15.3"
+metrics-process = "2"
+memory-stats = "1"
+sysinfo = "0.31"
+
 aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
 aws-types = "1.3.3"
 aws-sdk-s3 = "1.41.0"
